แก้ sprint 2 - fix #266
